deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-backend
  labels:
    app: dashboard-backend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: dashboard-backend
  template:
    metadata:
      labels:
        app: dashboard-backend
    spec:
      containers:
      - name: dashboard-backend
        image: tushant029/dashboard-backend:latest
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          # limits:
          #   cpu: "250m"
          #   memory: "256Mi"
