dashboard-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-backend-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: dashboard-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2000
