loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-backend-service
spec:
  type: LoadBalancer
  selector:
    app: dashboard-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2000
