service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-backend-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "2000"
spec:
  selector:
    app: dashboard-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2000
